Convert markaby to a submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vendor/plugins/auto_migrations"]
 	path = vendor/plugins/auto_migrations
 	url = git://github.com/pjhyett/auto_migrations.git
+[submodule "vendor/plugins/markaby"]
+	path = vendor/plugins/markaby
+	url = git://github.com/dinsley/markaby.git
